--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 nocows = true
-inventory = hosts.ini
+inventory = ~/.ansible/inventory.yml
 roles_path = roles
 collections_paths = ./
 interpreter_python = /usr/bin/python3
+remote_user = pirate
