--- a/site.yml
+++ b/site.yml
@@ -1,12 +1,12 @@
 ---
-# - name: Set up cluster-wide configuration.
-#   hosts: k3s_cluster
-#   become: true
+- name: Set up cluster-wide configuration.
+   hosts: k3s_cluster
+   become: true
 
-#   tasks: []
+   tasks: []
 
 - name: Deploy Kubernetes resources via master node.
-  hosts: master
+  hosts: main
   gather_facts: false
 
   collections:
