--- a/site.yml
+++ b/site.yml
@@ -1,10 +1,4 @@
 ---
-- name: Set up cluster-wide configuration.
-   hosts: k3s_cluster
-   become: true
-
-   tasks: []
-
 - name: Deploy Kubernetes resources via master node.
   hosts: main
   gather_facts: false
@@ -23,6 +17,10 @@
 
     - role: cluster_monitoring
       tags: ['monitoring', 'prometheus']
+
+    - role: infothrill.rpi_boot_config
+      boot_config_lines: ['gpu_mem=16'] 
+      tags: ['rpi_boot_config']
 
 #    - role: drupal
 #      tags: ['drupal']
