--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 nocows = true
-inventory = ~/.ansible/inventory.yml
+inventory = hosts.ini
 roles_path = roles
 collections_paths = ./
 interpreter_python = /usr/bin/python3
