--- a/roles/cluster_monitoring/defaults/main.yml
+++ b/roles/cluster_monitoring/defaults/main.yml
@@ -1,10 +1,12 @@
 ---
 # The version of the cluster-monitoring repo to check out. See commits:
 # https://github.com/carlosedp/cluster-monitoring/commits/master
-cluster_monitoring_version: 40c9318
+cluster_monitoring_version: c29680b
 
 # Whether to force updating the cluster-monitoring repository. Set this to true
 # if you change the cluster_monitoring_version above.
-cluster_monitoring_update_repo: false
+cluster_monitoring_update_repo: true
 
-grafana_from_email: myemail@example.com
+grafana_from_email: ncwilde43@gmail.com
+
+unifi_poller: false
