--- a/site.yml
+++ b/site.yml
@@ -1,13 +1,13 @@
 ---
 - name: Set up cluster-wide configuration.
-   hosts: k3s_cluster
-   become: true
+  hosts: k3s_cluster
+  become: true
 
-   tasks: []
+  tasks: []
 
 - name: Deploy Kubernetes resources via master node.
-  hosts: main
-  gather_facts: false
+  hosts: master
+  gather_facts: true
 
   collections:
     - community.kubernetes
