--- a/roles/cluster_monitoring/defaults/main.yml
+++ b/roles/cluster_monitoring/defaults/main.yml
@@ -9,4 +9,22 @@ cluster_monitoring_update_repo: true
 
 grafana_from_email: ncwilde43@gmail.com
 
-unifi_poller: false
+# Should we install unifi-poller and dashboards
+unifi_poller: true
+
+grafana_dashboards:
+  - dashboard_id: 11315
+    revision_id: 8
+    datasource: prometheus
+  - dashboard_id: 11311
+    revision_id: 4
+    datasource: prometheus
+  - dashboard_id: 11314
+    revision_id: 9
+    datasource: prometheus
+  - dashboard_id: 11313
+    revision_id: 8
+    datasource: prometheus
+  - dashboard_id: 11312
+    revision_id: 8
+    datasource: prometheus
