--- a/roles/cluster_monitoring/tasks/main.yml
+++ b/roles/cluster_monitoring/tasks/main.yml
@@ -33,13 +33,25 @@
       make:
         chdir: ~/cluster-monitoring
 
-    - name: Copy unifi-poller dashboards
-      copy:
-        src: "{{ item }}"
-        dest: ~/cluster-monitoring/grafana-dashboards/{{ item | basename | regex_replace('.j2','') }}
-      with_fileglob:
-        - files/*.json.j2
-      when: unifi_poller | bool
+    - name: Download grafana dashboard from grafana.net to local directory
+      command: >
+        curl --fail --compressed
+        https://grafana.com/api/dashboards/{{ item.dashboard_id }}/revisions/{{ item.revision_id }}/download
+        -o ~/cluster-monitoring/grafana-dashboards/{{ item.dashboard_id }}.json
+      args:
+        creates: "~/cluster-monitoring/grafana-dashboards/{{ item.dashboard_id }}.json"
+        warn: false
+      register: _download_dashboards
+      until: _download_dashboards is succeeded
+      retries: 5
+      delay: 2
+      with_items: "{{ grafana_dashboards }}"
+      when: grafana_dashboards | length > 0 and unifi_poller | bool
+      changed_when: false
+      check_mode: false
+      tags:
+        - skip_ansible_lint
+
   become: false
   when: >
     not vars_file_exists.stat.exists
