--- a/charts/homebridge/values.yaml
+++ b/charts/homebridge/values.yaml
@@ -5,3 +5,29 @@ image:
   tag: "latest"
 
 timezone: "America/Los_Angeles"
+
+config:
+  enableUI: true
+  plugins:
+  - homebridge-presence-switch-msgraph
+
+ingress:
+  enabled: true
+  hosts:
+  - homebridge.192.168.1.202.nip.io
+
+persistence:
+  enabled: true
+  existingClaim: homebridge-pvc
+
+probes:
+  liveness:
+    enabled: true
+    initialDelaySeconds: 2400
+    failureThreshold: 5
+    timeoutSeconds: 10
+  readiness:
+    enabled: true
+    initialDelaySeconds: 2400
+    failureThreshold: 5
+    timeoutSeconds: 10
