--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -4,11 +4,18 @@ ansible_user: pirate
 
 # Set to 'arm64' for a 64-bit OS, or 'arm' for 32-bit.
 helm_arch: arm
+pihole_chart_version: 1.7.19
+homebridge_chart_version: 1.0.1
+unifi_poller_chart_version: 2.0.1
 
 # Turing Pi.
-ingress_server_ip: 10.0.100.75
-load_balancer_server_ip: 10.0.100.99
+ingress_server_ip: 192.168.1.201
+load_balancer_server_ip: 192.168.1.201
+# https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: "America/Los_Angeles"
 
-# Dramble.
-# ingress_server_ip: 10.0.100.83
-# load_balancer_server_ip: 10.0.100.131
+# NFS
+nfs_server_ip: 192.168.1.192
+homebridge_nfs_path: "/home/pi/nas/homebridge"
+transmission_nfs_path: "/home/pi/nas"
+
