--- a/charts/unifi-poller/values.yml
+++ b/charts/unifi-poller/values.yml
@@ -11,7 +11,7 @@ config:
     defaults:
       role: "main controller"
       user: "unifipoller"
-      pass: "unifipoller"
+      pass: 'NLsf3#R7zt9!'
       url: "https://192.168.1.148:8443"
       sites:
         - all
