Added paths to installer role

--- a/roles/installer/tasks/main.yml
+++ b/roles/installer/tasks/main.yml
@@ -26,6 +26,7 @@
         enabled: true
         hosts:
           - host: 'installer.{{ load_balancer_server_ip }}.nip.io'
+            paths: [/]
       resources:
         limits:
           cpu: 200m
