--- a/site.yml
+++ b/site.yml
@@ -28,12 +28,12 @@
         - homebridge
         - transmission
 
-    - role: unifi_poller
-      tags: ['unifi-poller']
-      when: unifi_poller | bool
+#    - role: unifi_poller
+#      tags: ['unifi-poller']
+#      when: unifi_poller | bool
 
-    - role: cluster_monitoring
-      tags: ['monitoring', 'prometheus']
+#    - role: cluster_monitoring
+#      tags: ['monitoring', 'prometheus']
 
     - role: homebridge
       tags: ['homebridge']
