Updated defaults and variables

--- a/roles/homebridge/tasks/main.yml
+++ b/roles/homebridge/tasks/main.yml
@@ -6,13 +6,6 @@
     kind: Namespace
     state: present
 
-#- name: Apply pv and pvc manifests.
-#  k8s:
-#    definition: "{{ lookup('template', 'templates/' + item ) }}"
-#    state: present
-#  loop:
-#    - pvc.yaml
-
 - name: Add k8s-at-home chart repo.
   helm_repository:
     name: k8s-at-home
@@ -41,7 +34,7 @@
           - 'homebridge.{{ ingress_server_ip }}.nip.io'
       persistence:
         enabled: true
-        storageClass: "managed-nfs-storage"
+        storageClass: "{{ storage_class }}"
       probes:
         liveness:
           enabled: true
