--- a/roles/pihole/defaults/main.yml
+++ b/roles/pihole/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
-pihole_chart_version: 1.7.19
-load_balancer_server_ip: 192.168.1.202
+pihole_chart_version: 1.7.20
+ingress_server_ip: 192.168.1.201
