Added gotify and diun roles

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -9,6 +9,8 @@ homebridge_chart_version: 1.0.2
 unifi_poller_chart_version: 3.0.0
 installer_chart_version: 0.1.5
 transmission_chart_version: 0.1.5
+diun_chart_version: 0.1.0
+gotify_chart_version: 0.1.5
 
 # Turing Pi.
 ingress_server_ip: 192.168.1.201
