--- a/roles/status/tasks/main.yml
+++ b/roles/status/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Get Ingress records from monitoring namespace.
-  k8s_info:
+  kubernetes.core.k8s_info:
     api_version: extensions/v1beta1
     kind: Ingress
     namespace: monitoring
@@ -20,14 +20,48 @@
     namespace: transmission
   register: transmission_ingress
 
+- name: Get Ingress records from installer namespace.
+  k8s_info:
+    api_version: extensions/v1beta1
+    kind: Ingress
+    namespace: installer
+  register: installer_ingress
 
-- name: Print relevant addresses.
+- name: Get Ingress records from gotify namespace.
+  k8s_info:
+    api_version: extensions/v1beta1
+    kind: Ingress
+    namespace: gotify
+  register: gotify_ingress
+
+- name: Print monitoring ingress.
   debug:
     msg:
       - "http://{{ monitoring_ingress['resources'][0]['spec']['rules'][0]['host'] }}/"
       - "http://{{ monitoring_ingress['resources'][1]['spec']['rules'][0]['host'] }}/"
       - "http://{{ monitoring_ingress['resources'][2]['spec']['rules'][0]['host'] }}/"
+  when: monitoring_ingress['resources'][0]['spec']['rules'][0]['host'] is defined
+
+- name: Print Homebridge ingress.
+  debug:
+    msg:
       - "http://{{ homebridge_ingress['resources'][0]['spec']['rules'][0]['host'] }}/"
+  when: homebridge_ingress['resources'][0]['spec']['rules'][0]['host'] is defined
+
+- name: Print Transmission ingress.
+  debug:
+    msg:
       - "http://{{ transmission_ingress['resources'][0]['spec']['rules'][0]['host'] }}/"
-      - "Pi-hole: http://pi.hole/ (add record for {{ load_balancer_server_ip }} to /etc/hosts)"
-  tags: ['debug']
+  when: transmission_ingress['resources'][0]['spec']['rules'][0]['host'] is defined
+
+- name: Print installer ingress.
+  debug:
+    msg:
+      - "http://{{ installer_ingress['resources'][0]['spec']['rules'][0]['host'] }}/"
+  when: installer_ingress['resources'][0]['spec']['rules'][0]['host'] is defined
+
+- name: Print gotify ingress.
+  debug:
+    msg:
+      - "http://{{ gotify_ingress['resources'][0]['spec']['rules'][0]['host'] }}/"
+  when: gotify_ingress['resources'][0]['spec']['rules'][0]['host'] is defined
