--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,9 +1,7 @@
 [defaults]
 nocows = true
-inventory = hosts.ini
+inventory = hosts.yaml
 roles_path = roles
 collections_paths = ./
 interpreter_python = /usr/bin/python3
 remote_user = pirate
-
-unifi_poller = false
