--- a/roles/status/tasks/main.yml
+++ b/roles/status/tasks/main.yml
@@ -34,6 +34,13 @@
     namespace: gotify
   register: gotify_ingress
 
+- name: Get Ingress records from booksonic namespace.
+  k8s_info:
+    api_version: extensions/v1beta1
+    kind: Ingress
+    namespace: booksonic
+  register: booksonic_ingress
+
 - name: Print monitoring ingress.
   debug:
     msg:
@@ -65,3 +72,9 @@
     msg:
       - "http://{{ gotify_ingress['resources'][0]['spec']['rules'][0]['host'] }}/"
   when: gotify_ingress['resources'][0]['spec']['rules'][0]['host'] is defined
+
+- name: Print booksonic ingress.
+  debug:
+    msg:
+      - "http://{{ booksonic_ingress['resources'][0]['spec']['rules'][0]['host'] }}/"
+  when: booksonic_ingress['resources'][0]['spec']['rules'][0]['host'] is defined
