--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,3 +6,10 @@ repos:
       - id: yamllint
         name: Run yamllint
         description: Lint yaml files
+  - repo: https://github.com/ansible/ansible-lint
+    rev: v4.3.7
+    hooks:
+      - id: ansible-lint
+        name: Run ansible-lint
+        description: Lint ansible files
+        exclude: ansible/group_vars|ansible/vault_vars
