--- a/roles/booksonic/tasks/main.yml
+++ b/roles/booksonic/tasks/main.yml
@@ -7,12 +7,12 @@
     state: present
 
 - name: Add nicholaswilde chart repo.
-  helm_repository:
+  kubernetes.core.helm_repository:
     name: nicholaswilde
     repo_url: "https://nicholaswilde.github.io/helm-charts/"
 
 - name: Deploy booksonic Helm chart.
-  helm:
+  kubernetes.core.helm:
     name: booksonic
     chart_ref: nicholaswilde/booksonic
     chart_version: '{{ booksonic_chart_version }}'
