--- a/roles/diun/tasks/main.yml
+++ b/roles/diun/tasks/main.yml
@@ -7,12 +7,12 @@
     state: present
 
 - name: Add nicholaswilde chart repo.
-  helm_repository:
+  kubernetes.core.helm_repository:
     name: nicholaswilde
     repo_url: "https://nicholaswilde.github.io/helm-charts/"
 
 - name: Deploy diun Helm chart.
-  helm:
+  kubernetes.core.helm:
     name: diun
     chart_ref: nicholaswilde/diun
     chart_version: "{{ diun_chart_version }}"
