--- a/roles/gotify/tasks/main.yml
+++ b/roles/gotify/tasks/main.yml
@@ -7,7 +7,7 @@
     state: present
 
 - name: Add nicholaswilde chart repo.
-  helm_repository:
+  kubernetes.core.helm_repository:
     name: nicholaswilde
     repo_url: "https://nicholaswilde.github.io/helm-charts/"
 
