--- a/roles/homebridge/tasks/main.yml
+++ b/roles/homebridge/tasks/main.yml
@@ -7,12 +7,12 @@
     state: present
 
 - name: Add k8s-at-home chart repo.
-  helm_repository:
+  kubernetes.core.helm_repository:
     name: k8s-at-home
     repo_url: "https://k8s-at-home.com/charts/"
 
 - name: Deploy homebridge Helm chart.
-  helm:
+  kubernetes.core.helm:
     name: homebridge
     chart_ref: k8s-at-home/homebridge
     chart_version: '{{ homebridge_chart_version }}'
