--- a/roles/installer/tasks/main.yml
+++ b/roles/installer/tasks/main.yml
@@ -7,12 +7,12 @@
     state: present
 
 - name: Add nicholaswilde chart repo.
-  helm_repository:
+  kubernetes.core.helm_repository:
     name: nicholaswilde
     repo_url: "https://nicholaswilde.github.io/helm-charts/"
 
 - name: Deploy installer Helm chart.
-  helm:
+  kubernetes.core.helm:
     name: installer
     chart_ref: nicholaswilde/installer
     chart_version: "{{ installer_chart_version }}"
