--- a/roles/transmission/tasks/main.yml
+++ b/roles/transmission/tasks/main.yml
@@ -7,12 +7,12 @@
     state: present
 
 - name: Add nicholaswilde chart repo.
-  helm_repository:
+  kubernetes.core.helm_repository:
     name: nicholaswilde
     repo_url: "https://nicholaswilde.github.io/helm-charts/"
 
 - name: Deploy transmission Helm chart.
-  helm:
+  kubernetes.core.helm:
     name: transmission
     chart_ref: nicholaswilde/transmission
     chart_version: '{{ transmission_chart_version }}'
