--- a/.github/workflows/ansible-lint.yaml
+++ b/.github/workflows/ansible-lint.yaml
@@ -1,9 +1,9 @@
 name: Ansible Lint
-
-on: 
-  branches:
-    - main
-    - release/v*
+'on':
+  pull_request:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
