--- a/.github/workflows/ansible-lint.yaml
+++ b/.github/workflows/ansible-lint.yaml
@@ -11,7 +11,10 @@ jobs:
     steps:
     # Important: This sets up your GITHUB_WORKSPACE environment variable
     - uses: actions/checkout@v2
-
+      
+    - name: Install dependencies (collections)
+      run:  ansible-galaxy role install -r requirements.yml --force && ansible-galaxy collection install -r requirements.yml --force
+    
     - name: Lint Ansible Playbook
       uses: ansible/ansible-lint-action@master
       with:
