--- a/roles/booksonic/tasks/main.yml
+++ b/roles/booksonic/tasks/main.yml
@@ -6,11 +6,6 @@
     kind: Namespace
     state: present
 
-- name: Add nicholaswilde chart repo.
-  kubernetes.core.helm_repository:
-    name: nicholaswilde
-    repo_url: "https://nicholaswilde.github.io/helm-charts/"
-
 - name: Deploy booksonic Helm chart.
   kubernetes.core.helm:
     name: booksonic
@@ -39,7 +34,9 @@
         enabled: true
         hosts:
           - host: "booksonic.{{ ingress_server_ip }}.nip.io"
-            paths: [/]
+            paths:
+              - path: "/"
+                pathType: Prefix
       resources:
         limits:
           cpu: 200m
