--- a/roles/gotify/tasks/main.yml
+++ b/roles/gotify/tasks/main.yml
@@ -6,11 +6,6 @@
     kind: Namespace
     state: present
 
-- name: Add nicholaswilde chart repo.
-  kubernetes.core.helm_repository:
-    name: nicholaswilde
-    repo_url: "https://nicholaswilde.github.io/helm-charts/"
-
 - name: Deploy gofiy Helm chart.
   helm:
     name: gotify
@@ -26,7 +21,9 @@
         enabled: true
         hosts:
           - host: "gotify.{{ ingress_server_ip }}.nip.io"
-            paths: [/]
+            paths:
+              - path: "/"
+                pathType: Prefix
       resources:
         limits:
           cpu: 200m
