--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -17,7 +17,7 @@ pihole_chart_version: 1.7.20
 transmission_chart_version: 0.1.10
 
 # Turing Pi.
-ingress_server_ip: 192.168.1.193
+ingress_server_ip: ""
 # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone: "America/Los_Angeles"
 
