--- a/site.yml
+++ b/site.yml
@@ -1,10 +1,4 @@
 ---
-- name: Set up cluster-wide configuration.
-  hosts: k3s_cluster
-  become: true
-
-  tasks: []
-
 - name: Deploy Kubernetes resources via master node.
   hosts: master
   gather_facts: false
@@ -23,6 +17,9 @@
         - setup
         - homebridge
         - transmission
+
+    - role: get_ingress
+      tags: ['get_ingress']
 
     - role: 'repos/k8s-at-home'
       tags:
